[tool.poetry]
name = "lookyloo-tutorial"
version = "0.1.0"
description = "A developer-oriented tutorial to understand what lookyloo is for"
authors = ["Raphaël Vinot <raphael@lookyloo.eu>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.4.2"
pylookyloo = "^1.29.0"
pymisp = {version = "^2.5.12", extras = ["email", "fileobjects", "url"]}
pyphishtanklookup = "^1.4.1"
pypandora = "^1.9.3"
pylacus = "^1.14.0"
lacuscore = "^1.14.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core>=1.1"]
build-backend = "poetry.core.masonry.api"
